aggiunti file relazione

--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,19 @@
 
 \end{abstract}
 
-\section{}
+\section{Introduzione}
+\input{core/introduzione.tex}
+
+\section{Aspetti Progettuali}
+\input{core/progettazione.tex}
+
+\section{Aspetti Implementativi}
+\input{core/implementazione.tex}
+
+\section{Valutazione}
+\input{core/valutazione.tex}
+
+\section{Conclusioni}
+\input{core/conclusioni.tex}
 
 \end{document}
