--- a/main.tex
+++ b/main.tex
@@ -2,11 +2,13 @@
 \usepackage[utf8]{inputenc}
 \usepackage[italian]{babel}
 
-%opening
-\title{}
-\author{}
+
 
 \begin{document}
+
+%opening
+\title{BattleSheep \\ Progetto di Sistemi Distribuiti}
+\author{Giulio Biagini, Michele Corazza, Gianluca Iselli}
 
 \maketitle
 
