ciao a tutti, belli e brutti

--- a/main.tex
+++ b/main.tex
@@ -23,7 +23,10 @@
 \input{core/progettazione.tex}
 
 \section{Aspetti Implementativi}
-\input{core/implementazione.tex}
+\input{core/implementazione}
+\input{core/implementazione_modello}
+\input{core/implementazione_comunicazione}
+\input{core/implementazione_vista}
 
 \section{Valutazione}
 \input{core/valutazione.tex}
