intro dell'implementazione fatta

--- a/core/implementazione.tex
+++ b/core/implementazione.tex
@@ -26,4 +26,7 @@ partono dall'utente ed hanno come obiettivo quello di modificare lo
 \textit{stato globale} del gioco. Dunque, non soltanto le componenti software
 che permettono di interagire direttamente con i dati mantenuti negli oggetti
 del mio modello (locale), ma anche tutte le classi che permettono la
-comunicazione fra gli host impegnati nella partita.
+comunicazione fra gli host impegnati nella partita.\newline
+Il software è stato realizzato in \textbf{Java}, un linguaggio orientato agli
+oggetti, paradigma nel quale il modello MVC trova per sua stessa definizione un
+impiego del tutto naturale.
