2 righe sulla vista

--- a/core/implementazione_vista.tex
+++ b/core/implementazione_vista.tex
@@ -1,2 +1,3 @@
 \subsection{Vista}
-La vista\dots
+Le classi della vista sono state implementate utilizzando la libreria
+\textbf{Swing} fornita di default dal linguaggio.
