--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,10pt]{article}
+\documentclass[a4paper,10pt]{scrartcl}
 \usepackage[utf8]{inputenc}
 \usepackage[italian]{babel}
 
@@ -7,7 +7,8 @@
 \begin{document}
 
 %opening
-\title{BattleSheep \\ Progetto di Sistemi Distribuiti}
+\title{BattleSheep}
+\subtitle{Progetto di Sistemi Distribuiti}
 \author{Giulio Biagini, Michele Corazza, Gianluca Iselli}
 
 \maketitle
