fatta implementazione-comunicazione

--- a/core/TODO
+++ b/core/TODO
@@ -24,3 +24,9 @@ valutazione:
 
 conclusioni:
     -funzionaaaaa#2
+
+
+grafici e img(in implementazione):
+    -sequence gioco
+    -uml vari
+    -aggiungere img di biagio (in impl-grafica)
