fatta valutazione-conclusione

--- a/main.tex
+++ b/main.tex
@@ -29,10 +29,7 @@
 \input{core/implementazione_vista}
 \input{core/implementazione_comunicazione}
 
-\section{Valutazione}
+\section{Valutazione e Conclusioni}
 \input{core/valutazione.tex}
-
-\section{Conclusioni}
-\input{core/conclusioni.tex}
 
 \end{document}
