--- a/core/progettazione.tex
+++ b/core/progettazione.tex
@@ -95,6 +95,7 @@ La grafica del gioco si compone di 4 \textit{frame} principali:
 \end{itemize}
 
 \subsubsection{Main Frame}
+\label{subsubsection:progettazione_main_frame}
 Questo frame si compone semplicemente di due radio button che permettono di
 scegliere la modalità nella quale avviare il gioco. La modalità di default è
 quella che permette di far partire il programma come client. Una volta
@@ -102,6 +103,7 @@ effettuata la scelta sarà sufficiente confermare l'azione premendo sul bottone
 ``Ok''.
 
 \subsubsection{Lobby Frame}
+\label{subsubsection:progettazione_lobby_frame}
 Il frame della lobby permette di raccogliere le iscrizioni al gioco da parte dei
 vari client e si compone di 3 pannelli.\newline
 Il primo pannello permette di scegliere il nome della stanza. Uuna volta
@@ -115,6 +117,7 @@ del bottone ``Start'', saràpossibile chiudere le registrazioni ed avviare il
 gioco.
 
 \subsubsection{Registration Frame}
+\label{subsubsection:progettazione_registration_frame}
 Il frame per la registrazione si compone di una serie di pannelli che possono
 essere raggruppati in base alle funzionalità che offrono.\newline
 Nel primo pannello sono elencati i nomi delle stanze ed i relativi indirizzi ip
@@ -139,6 +142,7 @@ tutte le informazioni necessarie al gioco e a comunicare il proprio indirizzo
 ip ed username del giocatore alla lobby (entry point).
 
 \subsubsection{Game Frame}
+\label{subsubsection:progettazione_game_frame}
 Questo frame permette agli utenti di giocare gli uni contro gli altri. Nella
 parte alta è presente un'immagine con il titolo del gioco, quella centrale è
 occupata a sinistra dal campo di gioco dell'utente e a destra da quello
